fix : heading overflow issue

--- a/sass/common/reset.scss
+++ b/sass/common/reset.scss
@@ -18,3 +18,11 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
 	display: none;
 }
+
+html {
+	box-sizing: border-box;
+}
+
+*, :after, :before {
+    box-sizing: inherit;
+}
